log/2022-03-24T14:57:30+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-Extra ][0m
Autotest: Begin at Thu Mar 24 14:57:30 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
In file included from kerelf.h:29,
                 from readelf.c:7:
readelf.c: In function 'readelf':
readelf.c:80:59: error: 'p_align' undeclared (first use in this function)
   80 |          if (ROUNDDOWN(phdr1->p_offset + phdr1->p_filesz, p_align) == ROUNDDOWN(phdr2->p_offset, p_align))
      |                                                           ^~~~~~~
types.h:47:45: note: in definition of macro 'ROUNDDOWN'
   47 | #define ROUNDDOWN(a, n) (((u_long)(a)) & ~((n)-1))
      |                                             ^
readelf.c:80:59: note: each undeclared identifier is reported only once for each function it appears in
   80 |          if (ROUNDDOWN(phdr1->p_offset + phdr1->p_filesz, p_align) == ROUNDDOWN(phdr2->p_offset, p_align))
      |                                                           ^~~~~~~
types.h:47:45: note: in definition of macro 'ROUNDDOWN'
   47 | #define ROUNDDOWN(a, n) (((u_long)(a)) & ~((n)-1))
      |                                             ^
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 0 (of 100) this time. Thu Mar 24 14:57:32 CST 2022 ][0m
Autotest: End at Thu Mar 24 14:57:32 CST 2022
